# Distributed-Computing-Framework-FPGA

./: CMakeLists.txt  README.md
node/: CMakeLists.txt  globals.hpp  main.cpp
node/FPGAconfig/: CMakeLists.txt  hps.h  writeConfig.hpp
server/: CMakeLists.txt  Connection.hpp  Counter.hpp  Event.hpp  Message.hpp  Queue.hpp  Server.hpp  Stack.hpp  User_Queue.hpp  User_Stack.hpp  benchmark_queue.data  benchmark_resizing.py  benchmark_stack.data  benchmarking.py  latency_flatened_queue.csv  latency_flatened_stack.csv  launch_parallel_nodes.py  main.cpp  test_node.cpp  test_user.cpp  throughput_flatened_queue.csv  throughput_flatened_stack.csv
test/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/include/: Block.hpp  safeQ.hpp  utils.hpp
utils/src/: Block.cpp  utils.cpp
